Destroy the Connection Through the Session Thread

Summary:
This is the proper way to destroy a server connection.

BUG: 381636

Reviewers: #kde_pim, dvratil

Reviewed By: #kde_pim, dvratil

Subscribers: dvratil, kde-pim

Tags: #kde_pim

Differential Revision: https://phabricator.kde.org/D19212